--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
             <scope>system</scope>
             <systemPath>${path-to-javafx}jfxrt.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
