--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,17 @@
     <groupId>com.sai.javafx</groupId>
     <version>0.5.0-SNAPSHOT</version>
 
+    <parent>
+        <groupId>de.idos</groupId>
+        <artifactId>team-on</artifactId>
+        <version>3</version>
+    </parent>
+
+    <scm>
+        <connection>scm:git:ssh://git@scm:energiehandel.git</connection>
+        <developerConnection>scm:git:ssh://git@scm:energiehandel.git</developerConnection>
+    </scm>
+
     <dependencies>
         <dependency>
             <groupId>com.oracle</groupId>
