--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,13 @@
     <artifactId>calendar</artifactId>
     <groupId>com.sai.javafx</groupId>
     <version>0.5.0-SNAPSHOT</version>
+    
+    <licenses>
+      <license>
+        <name>Apache License, Version 2.0</name>
+        <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+      </license>
+    </licenses>
 
     <dependencies>
         <dependency>
